Website Publish (2.1.4) — Fixed language portfolio issue — Fixed padding on mobile manifesto cards

--- a/style.css
+++ b/style.css
@@ -519,7 +519,7 @@ padding-left: 0px;  }
     position: sticky;
     top: 0;
     width: 100%;
-    height: 92vh;
+    height: 91vh;
     background-color: var(--color-primary-dark);
     color: var(--color-background-2);
     z-index: 1;       
